<resources>
    <string name="app_name">Salaries</string>
    <string name="name">Full Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="designation">Designation</string>
    <string name="basic_salary">Basic Salary</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="add">Add</string>
    <string name="credit">"Current Credit : "</string>
    <string name="modify">Update</string>
    <string name="transactions">Transactions</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date">01–02–2020</string>
    <string name="no_employee">No Employee(s)</string>
    <string name="no_transactions">No Transaction(s)</string>
    <string name="please_wait">Please Wait</string>
    <string name="manage_employees">Manage Employees</string>
    <string name="help">Help</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_question">Don\'t have an Account ? </string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="sign_up_text">Sign Up</string>
    <string name="add_emp">Add Employee Details</string>
    <string name="update_emp">Update Employee Details</string>
    <string name="company_shop_name">Company/ Shop Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="off_days">off days (for this month)</string>
    <string name="amount">Amount</string>
    <string name="sample_amount">3000</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="sign_out">Sign out</string>
    <string name="home">Home</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">or</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_code"><u>Resend Code ?</u></string>
    <string name="sign_in">Sign In</string>
</resources>
