<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/mainFragment2"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/manageEmployeeFragment"
            android:icon="@drawable/ic_employees"
            android:title="@string/manage_employees"/>

        <item
            android:id="@+id/selectForPayFragment"
            android:icon="@drawable/payment"
            android:title="@string/pay"/>

        <item
            android:id="@+id/transactionFragment"
            android:icon="@drawable/transactions"
            android:title="@string/transactions"/>

        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:title="@string/help"/>

    </group>

        <item android:title="@string/profile">

            <menu>
                <item
                    android:id="@+id/sign_out"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/sign_out"/>

            </menu>

        </item>

    <item android:title="@string/communicate">
        <menu>

            <item
                android:id="@+id/menu_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>

            <item
                android:id="@+id/menu_contact_us"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact_us"/>

            <item
                android:id="@+id/menu_rate_us"
                android:icon="@drawable/ic_rate_us"
                android:title="@string/rate_us"/>

        </menu>
    </item>

</menu>