<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.EmployeeFormFragment"
    android:id="@+id/constraintLayout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/manage_employees"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/Salaries.TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:startIconDrawable="@drawable/ic_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/textView"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_of_birthLayout"
        style="@style/Salaries.TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/ic_date"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/nameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameLayout"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:hint="@string/date_of_birth"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MobLayout"
        style="@style/Salaries.TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/ic_mobile"
        app:endIconMode="clear_text"
        app:prefixText="+91 "
        app:prefixTextColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/date_of_birthLayout"
        app:layout_constraintStart_toStartOf="@+id/date_of_birthLayout"
        app:layout_constraintTop_toBottomOf="@+id/date_of_birthLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:hint="@string/mobile_no"
            android:inputType="number"
            android:maxLength="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desLayout"
        style="@style/Salaries.TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/ic_person_black_24dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/MobLayout"
        app:layout_constraintStart_toStartOf="@+id/MobLayout"
        app:layout_constraintTop_toBottomOf="@+id/MobLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:hint="@string/designation"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/salaryLayout"
        style="@style/Salaries.TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/ic_rupee"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/desLayout"
        app:layout_constraintStart_toStartOf="@+id/desLayout"
        app:layout_constraintTop_toBottomOf="@+id/desLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:hint="@string/basic_salary"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/salaryLayout"
        app:layout_constraintStart_toStartOf="@+id/salaryLayout"
        app:layout_constraintTop_toBottomOf="@+id/salaryLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>